--- a/src/index.css
+++ b/src/index.css
@@ -58,17 +58,17 @@
   font-family: 'Icons';
   font-style: normal;
   font-weight: 400;
-  src: url('https://d1z1l72482yrg7.cloudfront.net/icons/blc-icons-default.eot'); /* IE9 Compat Modes */
-  src: url('https://d1z1l72482yrg7.cloudfront.net/icons/blc-icons-default.eot?#iefix')
+  src: url('url/icons/icons-default.eot'); /* IE9 Compat Modes */
+  src: url('url/icons/icons-default.eot?#iefix')
       format('embedded-opentype'),
     /* IE6-IE8 */
-      url('https://d1z1l72482yrg7.cloudfront.net/icons/blc-icons-default.woff')
+      url('url/icons/icons-default.woff')
       format('woff'),
     /* Modern Browsers */
-      url('https://d1z1l72482yrg7.cloudfront.net/icons/blc-icons-default.woff2')
+      url('url/icons/icons-default.woff2')
       format('woff2'),
     /* Modern Browsers */
-      url('https://d1z1l72482yrg7.cloudfront.net/icons/blc-icons-default.ttf')
+      url('url/icons/icons-default.ttf')
       format('truetype'); /* Safari, Android, iOS */
   text-rendering: geometricPrecision;
   unicode-range:
